--- a/world1/start.html
+++ b/world1/start.html
@@ -19,6 +19,7 @@
                 <li>If you click in the grey area at the bottom of the screen, you can start typing! This is the command area -- hitting the <em>enter</em> key will execute the command you typed in!</li>
                 <li>At any point you can type in <span class='command'>help</span> in the command field, then hit the enter key, to get a list of possible commands, and other, hopefully helpful, information.</li>
                 <li>Have fun! Remember, a part of playing this text adventure is figuring out what you need to type in to do something. It's part of puzzle!</li>
+                <li>This game was created from scratch in less than 48 consecutive hours as part of the <a href='http://ludumdare.com' onclick="window.open('http://ludumdare.com');return false;">Ludum Dare</a>. If there is poor spelling and grammar, and loads of bugs -- that's par for the course!</li>
             </ul>
 
             Move <span class='command'>n</span>orth to start your game!
