Node 10 was finished last time, and now node11 is done too! ONE MORE TO GO!!!

--- a/index.html
+++ b/index.html
@@ -90,6 +90,8 @@
     settings.recipes = {
         'ink-quill-pen':{'name':'ink dipped quill pen', ingredients:['nd1-quill','nd1-ink']},
         'drawing':{'name':'drawing', ingredients:['ink-quill-pen','nd1-paper']},
+        'harness':{'name':'harness', ingredients:['nd11-needle-and-thread','nd11-wire']},
+        'glider':{'name':'glider', ingredients:['nd11-paper','harness']},
     };
 
     var diraliases = {
