DONE. Perhaps not as interactive and in depth as I thought I could make it, but I'm proud of a good 30 hours of straight work, whether or not it's a good game :)

--- a/index.html
+++ b/index.html
@@ -641,6 +641,12 @@
         return false;
     }
 
+    function agiveNormalSphere(junk) {
+        settings.inventory['nd12-normal-sphere'] = '"normal" sphere';
+        addMessage(settings.inventory['nd12-normal-sphere'] + " was added to your inventory");
+        return false;
+    }
+
     function playerHas(item, remove) {
         remove = typeof remove !== 'undefined' ? remove : true;
 
