--- a/world1/node1.html
+++ b/world1/node1.html
@@ -102,7 +102,7 @@
                 </p>
             </div>
         </li>
-        <li actioncmd='n/acommand'></li>
+        <li actioncmd='n/acommand'><div class='speech'></div></li>
     </ol>
     <ol conversationid='2' catrepeat='false' gotoifrepeat='-1'>
         <li>
