--- a/world1/node11.html
+++ b/world1/node11.html
@@ -57,7 +57,7 @@
                 </p>
             </div>
         </li>
-        <li actioncmd='s/acommand'></li>
+        <li actioncmd='s/acommand'><div class='speech'></div></li>
     </ol>
 </div>
 </div>
