--- a/world1/start.html
+++ b/world1/start.html
@@ -13,13 +13,19 @@
 <div class='look'>
     <div class='north'>
         <div class='systemmessage'>
-            Welcome! Here's a few things you should know:
-
+            <h1>The Tiny World</h1>
+            <h2>A text adventure by Joel Kleier</h2>
+            <p>Created between April 20th and 22nd, 2012</p>
+            <p>
+                Welcome! Here's a few things you should know to get started:
+            </p>
             <ul>
                 <li>If you click in the grey area at the bottom of the screen, you can start typing! This is the command area -- hitting the <em>enter</em> key will execute the command you typed in!</li>
                 <li>At any point you can type in <span class='command'>help</span> in the command field, then hit the enter key, to get a list of possible commands, and other, hopefully helpful, information.</li>
                 <li>Have fun! Remember, a part of playing this text adventure is figuring out what you need to type in to do something. It's part of puzzle!</li>
-                <li>This game was created from scratch in less than 48 consecutive hours as part of the <a href='http://ludumdare.com' onclick="window.open('http://ludumdare.com');return false;">Ludum Dare</a>. If there is poor spelling and grammar, and loads of bugs -- that's par for the course!</li>
+                <li>This game was created from scratch in less than 48 consecutive hours as part of the <a href='http://ludumdare.com' onclick="window.open('http://ludumdare.com');return false;">Ludum Dare</a>. If there is poor spelling and grammar, loads of bugs, or just a bad game -- that's par for the course!</li>
+                <li><a href='https://github.com/zombified/thetinyworld' onclick="window.open('https://github.com/zombified/thetinyworld');return false;">Source Code</a> on <a href='https://github.com' onclick="window.open('https://github.com');return false;">github</a></li>
+                <li><a href='http://www.ludumdare.com/compo/ludum-dare-23/?action=vote&uid=7263' onclick="window.open('http://www.ludumdare.com/compo/ludum-dare-23/?action=vote&uid=7263');return false;">Ludum Dare submission page</a></li>
             </ul>
 
             Move <span class='command'>n</span>orth to start your game!
