Fixed url since voting isn't enabled yet.

--- a/world1/start.html
+++ b/world1/start.html
@@ -25,7 +25,7 @@
                 <li>Have fun! Remember, a part of playing this text adventure is figuring out what you need to type in to do something. It's part of puzzle!</li>
                 <li>This game was created from scratch in less than 48 consecutive hours as part of the <a href='http://ludumdare.com' onclick="window.open('http://ludumdare.com');return false;">Ludum Dare</a>. If there is poor spelling and grammar, loads of bugs, or just a bad game -- that's par for the course!</li>
                 <li><a href='https://github.com/zombified/thetinyworld' onclick="window.open('https://github.com/zombified/thetinyworld');return false;">Source Code</a> on <a href='https://github.com' onclick="window.open('https://github.com');return false;">github</a></li>
-                <li><a href='http://www.ludumdare.com/compo/ludum-dare-23/?action=vote&uid=7263' onclick="window.open('http://www.ludumdare.com/compo/ludum-dare-23/?action=vote&uid=7263');return false;">Ludum Dare submission page</a></li>
+                <li><a href='http://www.ludumdare.com/compo/ludum-dare-23/?action=preview&uid=7263' onclick="window.open('http://www.ludumdare.com/compo/ludum-dare-23/?action=preview&uid=7263');return false;">Ludum Dare submission page</a></li>
             </ul>
 
             Move <span class='command'>n</span>orth to start your game!
